--- a/vis_comp_2/clase_1/Capas_convolucionales.ipynb
+++ b/vis_comp_2/clase_1/Capas_convolucionales.ipynb
@@ -69,9 +69,7 @@
     "    - Crear una máscara\n",
     "    - Distribuir valores\n",
     "\n",
-    "Vamos a implementar todo esto usando funciones elementales de `numpy`. Luego vamos a usar Keras/TensorFlow para implementar el siguiente modelo:\n",
-    "\n",
-    "<img src=\"images/model.png\" style=\"width:800px;height:300px;\">\n"
+    "Vamos a implementar todo esto usando funciones elementales de `numpy`.\n"
    ]
   },
   {
