--- a/vis_comp_2/clase_2/Dataset_y_data_augmentation.ipynb
+++ b/vis_comp_2/clase_2/Dataset_y_data_augmentation.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "i = 1\n",
-    "for batch in train_datagen.flow(x, batch_size=1,\n",
+    "for batch in train_datagen.flow(train_generator, batch_size=1,\n",
     "                          save_to_dir='.', save_prefix='img', save_format='jpeg'):\n",
     "    i += 1\n",
     "    if i > 6:\n",
@@ -511,7 +511,7 @@
    ],
    "source": [
     "i = 1\n",
-    "for batch in train_datagen.flow(x, batch_size=1,\n",
+    "for batch in train_datagen.flow(train_generator, batch_size=1,\n",
     "                          save_to_dir='.', save_prefix='img', save_format='jpeg'):\n",
     "    i += 1\n",
     "    if i > 6:\n",
